--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Kalqlater</title>
     <h1>1234569690</h1>
 </head>
 <body>
-    
+    <div class="calc-body">
+        <div class="calc-display">
+            <div id="upper-display"></div>
+        </div>
+        <div class="calc-buttons">
+            <button id="all-clear">AC</button>
+            <button id="divide">/</button>
+            <button id="multiply">×</button>
+            <button id="seven">7</button>  
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="subtract">−</button>
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="add">+</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="zero">0</button>
+            <button id="decimal">.</button>
+            <button id="equals">=</button>            
+        </div>
+
+    </div>
 </body>
 </html>
