Clean layout and add digit shadow

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Kalqlater</title>
-    <h1>1234569690</h1>
 </head>
 <body>
-    <div class="calc-body">
+    <div class="calculator">
         <div class="calc-display">
-            <div id="upper-display"></div>
+            <div class="calc-upper-display">testing</div>
+            <div class="output-container">
+                <span class="output-display">xello</span>
+                <span class="digit-shadow">8.8.8.8.8.8.</span>
+            </div>
         </div>
         <div class="calc-buttons">
             <button id="all-clear">AC</button>
@@ -34,7 +37,6 @@
             <button id="decimal">.</button>
             <button id="equals">=</button>            
         </div>
-
     </div>
 </body>
 </html>
