Impliment the display to show currentValue

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
         <div class="calc-display">
             <div class="calc-upper-display">testing</div>
             <div class="output-container">
-                <span class="output-display">xello</span>
+                <span id="output-display">xello</span>
                 <span class="digit-shadow">8.8.8.8.8.8.</span>
             </div>
         </div>
         <div class="calc-buttons">
             <button id="all-clear">AC</button>
-            <button id="divide">/</button>
-            <button id="multiply">×</button>
-            <button id="seven">7</button>  
-            <button id="eight">8</button>
-            <button id="nine">9</button>
-            <button id="subtract">−</button>
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
-            <button id="add">+</button>
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="zero">0</button>
+            <button class="operator" id="divide">/</button>
+            <button class="operator" id="multiply">×</button>
+            <button class="digit" id="seven">7</button>  
+            <button class="digit" id="eight">8</button>
+            <button class="digit" id="nine">9</button>
+            <button class="operator" id="subtract">−</button>
+            <button class="digit" id="four">4</button>
+            <button class="digit" id="five">5</button>
+            <button class="digit" id="six">6</button>
+            <button class="operator" id="add">+</button>
+            <button class="digit" id="one">1</button>
+            <button class="digit" id="two">2</button>
+            <button class="digit" id="three">3</button>
+            <button class="digit" id="zero">0</button>
             <button id="decimal">.</button>
             <button id="equals">=</button>            
         </div>
