make major changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="calculator">
         <div class="calc-display">
-            <div class="calc-upper-display">testing</div>
+            <div id="calc-upper-display"></div>
             <div class="output-container">
                 <span id="output-display">xello</span>
                 <span class="digit-shadow">8.8.8.8.8.8.</span>
